syntax = "proto3";

message RichTextDescription {
    string format = 1;
}
